A bunch of UI tweaks. Still trying to get the SSE working for the hosts list.

--- a/internal/web/api-view.html
+++ b/internal/web/api-view.html
@@ -1,9 +1,9 @@
-<div class="h-full flex flex-col gap-4">
-  <div>
-    <h2 class="text-xl font-semibold text-desert-fg">API Documentation</h2>
-    <p class="text-sm text-desert-tan">Complete list of available API endpoints</p>
-  </div>
+<div class="my-2 text-center">
+  <div class="text-sm font-semibold text-desert-fg">API Reference</div>
+  <div class="text-sm text-desert-tan">...</div>
+</div>
 
+<div class="h-full flex flex-col gap-4">
   <div class="space-y-4">
     <!-- Health & Version -->
     <div class="bg-desert-darkgray rounded shadow-lg p-4 border border-desert-gray">
