--- a/internal/web/advanced-view.html
+++ b/internal/web/advanced-view.html
@@ -1,13 +1,13 @@
-<div class="h-full flex flex-col gap-4">
-  <div>
-    <span class="text-base font-semibold text-desert-fg">Advanced Settings </span>
-    <span class="text-sm text-desert-tan">Backup, restore, and diagnostic tools.</span>
+<div class="h-full flex flex-col">
+  <div class="my-2 text-center">
+    <div class="text-sm font-semibold text-desert-fg">Advanced Settings</div>
+    <div class="text-sm text-desert-tan">Backup, restore, and diagnostic tools.</div>
   </div>
 
   <div class="grid md:grid-cols-3 gap-4">
     <!-- Fleet Synchronization -->
     <div class="bg-desert-darkgray rounded shadow-lg p-4 border border-desert-gray">
-      <h3 class="font-medium mb-3 text-desert-yellow">⚠️ Fleet Synchronization</h3>
+      <h3 class="font-medium mb-3 text-desert-yellow">Fleet Synchronization</h3>
       <div class="space-y-3">
         <div class="bg-orange-900/20 border border-orange-700/50 rounded p-2 mb-3">
           <p class="text-xs text-orange-300">⚠️ <strong>Warning:</strong> These operations will overwrite peer host lists. Individual edits auto-sync automatically.</p>
@@ -80,7 +80,7 @@
     </div>
 
     <!-- Backup History -->
-    <div id="backup-history" class="bg-desert-darkgray rounded shadow-lg p-4 border border-desert-gray md:col-span-3">
+    <div id="backup-history" class="bg-desert-darkgray rounded shadow-lg p-4 border border-desert-gray">
       <h3 class="font-medium mb-2 text-desert-yellow">Backup History</h3>
       <div id="backup-list" class="text-xs font-mono space-y-0.5 max-h-96 overflow-y-auto bg-black/30 p-3 rounded border border-desert-gray">
         <div class="text-desert-gray italic">Loading backup history...</div>
